# Convolutional-Pose-Machines

./: LICENSE  README.md  TensorFLow Lite 开发手册（1.1）.html  convert.py  generate_data.py  inference.py  model.py  train.py
CPM-TFLITE/: CMakeLists.txt  main.cpp  settings.h  utils.cc
